Refactor mirror system & add notices support (#42)
* Fix quotes: (#33)

- Displaying 0000 when no discriminator was found => no more displaying of discriminator
- Not displaying nicknames => now displays

Co-authored-by: hokkaydo <“hokkaydo@users.noreply.github.com”>

* Update docker compose

* Changing restart policy

* Add database support (#41)

Bring database support for existing features including mirrors, exams retrieving, configuration, confessions, and static files (e.g. courses)
Uses part of Spring library to facilitate code

Co-authored-by: Lucien Fiorini <lucien.fiorini@student.uclouvain.be>
Co-authored-by: hokkaydo <“hokkaydo@users.noreply.github.com”>
Co-authored-by: Martin G <52447866+megaaa13@users.noreply.github.com>

* Refactor mirroring (#35)

Use the webhook system to mirror messages.

---------

Co-authored-by: hokkaydo <“hokkaydo@users.noreply.github.com”>

* Add notices (#32)

* Add notice module & fix typos in strings.json:
- Add notice command
- Add skeleton for listnotices command
- Waiting for database support to complete notice command

* Update notice command :
- Include listnotices command using action parameter

* Add notices database support
- Created repository, model
- Updated course repositories to adapt correctly to notices
- Extracted method hastebinPost to MessageUtil
- Added notices specific strings.json

---------

Co-authored-by: hokkaydo <“hokkaydo@users.noreply.github.com”>

* Change status message

---------

Co-authored-by: hokkaydo <“hokkaydo@users.noreply.github.com”>
Co-authored-by: megaaa13 <martin.gyselinck02@gmail.com>
Co-authored-by: Martin G <52447866+megaaa13@users.noreply.github.com>
Co-authored-by: Lucien Fiorini <lucien.fiorini@student.uclouvain.be>